--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <div class="sidebar">
+
+  <!-- Hamburger Button -->
+  <div class="hamburger" onclick="toggleMenu()">☰</div>
+
+  <!-- Sliding Sidebar -->
+  <div class="sidebar" id="sidebar">
     <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
   </div>
