--- a/about.html
+++ b/about.html
@@ -7,7 +7,12 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="sidebar">
+
+  <!-- Hamburger -->
+  <div class="hamburger" onclick="toggleMenu()">☰</div>
+
+  <!-- Sidebar -->
+  <div class="sidebar" id="sidebar">
     <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
   </div>
@@ -15,10 +20,11 @@
   <div class="main">
     <h2>About Me</h2>
     <p>
-      <!-- You will provide your bio text later, placeholder for now -->
-      Hi, I’m the creator of MathMagix! I built this tool to help students love math.
-      More info about me coming soon. 🌟
+      <!-- You will provide your bio later -->
+      Hi, I’m the creator of MathMagix — a fun, stylish calculator app made for students like you. I’m still working on more features. Stay tuned!
     </p>
   </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
