--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>MathMagix</title>
+  <title>MathMagix Home</title>
   <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
+  <script>
+    function openNav() { document.getElementById("mySidebar").style.width = "250px"; }
+    function closeNav() { document.getElementById("mySidebar").style.width = "0"; }
+  </script>
 </head>
 <body>
   <button class="openbtn" onclick="openNav()">☰ Menu</button>
@@ -14,18 +17,13 @@
     <a href="calculator.html">Calculator</a>
     <a href="differentiation.html">Differentiation</a>
     <a href="integration.html">Integration</a>
+    <a href="steps.html">Step Solver</a>
     <a href="about.html">About Us</a>
   </div>
 
   <div class="content">
-    <h1>✨ Welcome to MathMagix ✨</h1>
-    <p>Choose what you want to explore:</p>
-    <ul>
-      <li><a href="calculator.html">Basic Calculator</a></li>
-      <li><a href="differentiation.html">Differentiation</a></li>
-      <li><a href="integration.html">Integration</a></li>
-      <li><a href="about.html">About Us</a></li>
-    </ul>
+    <h1>🌌 Welcome to MathMagix</h1>
+    <p>Your all-in-one smart calculator for every kind of math ✨</p>
   </div>
 </body>
 </html>
